--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,26 @@
 .App {
   text-align: center;
+
+
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap ;
+  /* justify-content: space-around; */
+
+}
+
+#container {
+  height: 550px;
+  width: 550px;
+  margin:auto;
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  justify-items: center;
+  align-items: center;
+  background-color:gray;
 }
 
 .App-logo {
